Mostrar datos del paciente implementado

--- a/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
+++ b/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
@@ -16,6 +16,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	    <servlet-name>ServletLogIn</servlet-name>
 	    <servlet-class>es.isst.g15.ServletLogIn</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>ServletLogOut</servlet-name>
+	    <servlet-class>es.isst.g15.ServletLogOut</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>ISST_G15_ControlGlucosa</servlet-name>
 		<url-pattern>/isst_g15_controlglucosa</url-pattern>
@@ -27,6 +31,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>ServletLogIn</servlet-name>
 		<url-pattern>/logIn</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ServletLogOut</servlet-name>
+		<url-pattern>/logOut</url-pattern>
 	</servlet-mapping>
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
