--- a/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
+++ b/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
@@ -32,6 +32,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	    <servlet-name>ServletMedidaNueva</servlet-name>
 	    <servlet-class>es.isst.g15.ServletMedidaNueva</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>ServletUpdateCsv</servlet-name>
+	    <servlet-class>es.isst.g15.ServletUpdateCsv</servlet-class>
+	</servlet>
+	
 	<servlet-mapping>
 		<servlet-name>ISST_G15_ControlGlucosa</servlet-name>
 		<url-pattern>/isst_g15_controlglucosa</url-pattern>
@@ -60,6 +65,11 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-name>ServletMedidaNueva</servlet-name>
 		<url-pattern>/MedidaNueva</url-pattern>
 	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ServletUpdateCsv</servlet-name>
+		<url-pattern>/upload</url-pattern>
+	</servlet-mapping>
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
