--- a/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
+++ b/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
@@ -40,6 +40,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	    <servlet-name>ServletMostrarDatos</servlet-name>
 	    <servlet-class>es.isst.g15.ServletMostrarDatos</servlet-class>
 	</servlet>
+	<servlet>
+	    <servlet-name>ServletSeleccionaPaciente</servlet-name>
+	    <servlet-class>es.isst.g15.ServletSeleccionaPaciente</servlet-class>
+	</servlet>
 	
 	<servlet-mapping>
 		<servlet-name>ISST_G15_ControlGlucosa</servlet-name>
@@ -76,6 +80,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>ServletMostrarDatos</servlet-name>
 		<url-pattern>/mostrar</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>ServletSeleccionaPaciente</servlet-name>
+		<url-pattern>/seleccionaPaciente</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
