--- a/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
+++ b/ISST-G15-ControlGlucosa/war/WEB-INF/web.xml
@@ -9,6 +9,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 		<servlet-class>es.isst.g15.ISST_G15_ControlGlucosaServlet</servlet-class>
 	</servlet>
 	<servlet>
+		<servlet-name>imprimeServlet</servlet-name>
+		<servlet-class>es.isst.g15.imprimeServlet</servlet-class>
+	</servlet>
+	<servlet>
 	    <servlet-name>ServletRegistroPaciente</servlet-name>
 	    <servlet-class>es.isst.g15.ServletRegistroPaciente</servlet-class>
 	</servlet>
@@ -84,6 +88,10 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<servlet-mapping>
 		<servlet-name>ServletSeleccionaPaciente</servlet-name>
 		<url-pattern>/seleccionaPaciente</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>imprimeServlet</servlet-name>
+		<url-pattern>/imprIme</url-pattern>
 	</servlet-mapping>
 	
 	<welcome-file-list>
